--- a/src/main/resources/templates/confirmBooking.html
+++ b/src/main/resources/templates/confirmBooking.html
@@ -2,32 +2,20 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>Confirm Booking</title>
-</head>
-<body>
-<ul>
-    <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
-    <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
-    <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
-    <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
-    <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
-</ul>
+    <head>
+        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+        <title>Confirm Booking</title>
+    </head>
+    <body class="confirmBooking">
+        <ul>
+            <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+            <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+            <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+            <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+            <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+            <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        </ul>
 
-<h2 class="confirmLogin-title" style="font-size:30px" th:text="'Your booking is successful' + '!'"></h2>
-
-    <style>
-            body {
-              background-image: url('/images/confirmBooking.jpg');
-              width: auto;
-              height: auto;
-              background-repeat: no-repeat;
-              background-size: 100%;
-              background-position: center%;
-            }
-    </style>
-
-</body>
+        <h2 class="confirmBooking"  th:text="'Your booking is successful' + '!'"></h2>
+    </body>
 </html>
