--- a/src/main/resources/templates/galleryFotbal.html
+++ b/src/main/resources/templates/galleryFotbal.html
@@ -38,13 +38,13 @@
             </div>
 
             <div class="column" id="contentColumn3">
-                <img src="/images/FootballField3.jpg" alt="FootballField3">>
+                <img src="/images/FootballField3.jpg" alt="FootballField3">
                 <div class="container">
                     <h2>Teren 3</h2>
                     <p>Situat pe drumul care leagă Cluj-Napoca de Turda acest teren vă oferă posibilitatea de a face sport într-un loc cu adevărat de vis !</p>
                 </div>
             </div>
-
+        <br><br><br>
             <div class="column" id="contentColumn4">
                 <img src="/images/FootballField4.jpg" alt="FootballField4" >
                 <div class="container">
