--- a/src/main/resources/templates/infoBooking.html
+++ b/src/main/resources/templates/infoBooking.html
@@ -2,48 +2,39 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>Confirm Booking</title>
-</head>
-<body>
-<ul>
-    <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
-    <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
-    <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
-    <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
-    <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
-</ul>
-<h2 class="confirmLogin-title" style="font-size:30px" th:text="'Great, '+${userName}+'! Here are your booking details: '"></h2>
-<h2 class="confirmLogin-title" th:text="' -booking playground: '+${playGroundName}"></h2>
-<h2 class="confirmLogin-title" th:text="' -booking date: '+${booking.bookingDate}"></h2>
-<h2 class="confirmLogin-title" th:text="' -booking hour: '+${booking.bookingHour}"></h2>
-<h2 class="confirmLogin-title" th:text="' -booking duration: '+${booking.bookingDuration}+' hours.'"></h2>
-<br/>
-<h2 class="confirmLogin-title" th:text="'Total price: '+${bookingPrice}+' RON'"></h2>
-<h2 class="confirmLogin-title" th:text="'Do you want to continue?'"></h2>
+    <head>
+        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+        <title>Confirm Booking</title>
+    </head>
+    <body class="infoBooking">
+        <ul>
+            <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+            <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+            <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+            <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+            <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+            <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        </ul>
+        <h2 class="confirmLogin-title" style="font-size:30px" th:text="'Great, '+${userName}+'! Here are your booking details: '"></h2>
+        <h2 class="confirmLogin-title" th:text="' -booking playground: '+${playGroundName}"></h2>
+        <h2 class="confirmLogin-title" th:text="' -booking date: '+${booking.bookingDate}"></h2>
+        <h2 class="confirmLogin-title" th:text="' -booking hour: '+${booking.bookingHour}"></h2>
+        <h2 class="confirmLogin-title" th:text="' -booking duration: '+${booking.bookingDuration}+' hours.'"></h2>
+        <br/>
+        <h2 class="confirmLogin-title" th:text="'Total price: '+${bookingPrice}+' RON'"></h2>
+        <h2 class="confirmLogin-title" th:text="'Do you want to continue?'"></h2>
 
- <div>
-     <button type="button">
-         <a th:href="@{'/'}">Cancel</a>
-     </button>
+         <div>
+             <button type="button">
+                 <a th:href="@{'/'}">Cancel</a>
+             </button>
 
-     <button type="button">
-         <a th:href="@{'/confirmBooking?playGroundName='+${playGroundName}+'&userID='+${userID}+'&bookingDate='+${booking.bookingDate}+'&bookingHour='+${booking.bookingHour}+'&bookingDuration='+${booking.bookingDuration}}">Yes, confirm booking</a>
-     </button>
- </div>
+             <button type="button">
+                 <a th:href="@{'/confirmBooking?playGroundName='+${playGroundName}+'&userID='+${userID}+'&bookingDate='+${booking.bookingDate}+'&bookingHour='+${booking.bookingHour}+'&bookingDuration='+${booking.bookingDuration}}">Yes, confirm booking</a>
+             </button>
+         </div>
 
-    <style>
-            body {
-              background-image: url('/images/infoBooking.jpg');
-              width: auto;
-              height: auto;
-              background-repeat: no-repeat;
-              background-size: 100%;
-              background-position: center%;
-            }
-    </style>
 
-</body>
+
+    </body>
 </html>
