--- a/src/main/resources/templates/bookingNotAvailable.html
+++ b/src/main/resources/templates/bookingNotAvailable.html
@@ -2,50 +2,42 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>Confirm Booking</title>
-</head>
-<body>
-<ul>
-    <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
-    <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
-    <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
-    <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
-    <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
-</ul>
-<p>Playground ID: [[${playGroundID}]]</p>
+    <head>
+        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+        <title>Confirm Booking</title>
+    </head>
+    <body class="bookingNotAvailable">
+        <ul>
+            <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+            <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+            <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+            <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+            <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+            <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        </ul>
+        <p>Playground ID: [[${playGroundID}]]</p>
 
 
-<h2 class="confirmLogin-title" th:text="'Hello '+ ${userName} + ','"></h2>
-<p>The playground is already booked for [[${myHoursBooked}]]. Please select another booking time!</p>
-<p><a th:href="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}"><button>Select another booking time</button></a></p>
+        <h2 class="confirmLogin-title" th:text="'Hello '+ ${userName} + ','"></h2>
+        <p>The playground is already booked for [[${myHoursBooked}]]. Please select another booking time!</p>
+        <p><a th:href="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}"><button>Select another booking time</button></a></p>
 
-<style>
-body {
-background-image: url('/images/bookingNotAvailable.jpg');
-width: auto;
-height: auto;
-background-repeat: no-repeat;
-background-size: 100%;
-background-position: center%;
-}
-</style>
-<!--<form action="#" th:action="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}" th:object="${booking}" method="post">-->
-<!--    <table border="0">-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <input type="submit" value="Select another booking" />-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--    </table>-->
-<!--</form>-->
 
-<!--<button type="submit">Submit</button>-->
-<!--<button type="button">-->
-<!--    <a th:href="@{'/selectBooking?playGroundName='+${playGroundName}+'&userID='+${userID}}">Submit</a>-->
-<!--</button>-->
+        </style>
+        <!--<form action="#" th:action="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}" th:object="${booking}" method="post">-->
+        <!--    <table border="0">-->
+        <!--        <tr>-->
+        <!--            <td>-->
+        <!--                <input type="submit" value="Select another booking" />-->
+        <!--            </td>-->
+        <!--        </tr>-->
+        <!--    </table>-->
+        <!--</form>-->
 
-</body>
+        <!--<button type="submit">Submit</button>-->
+        <!--<button type="button">-->
+        <!--    <a th:href="@{'/selectBooking?playGroundName='+${playGroundName}+'&userID='+${userID}}">Submit</a>-->
+        <!--</button>-->
+
+    </body>
 </html>
