--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,43 +2,35 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>SportParkBooking - Home</title>
-</head>
-<body>
-<ul>
-    <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
-    <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
-    <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
-    <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
-    <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
-</ul>
-<p><br/></p>
-<div>
-    <h1>Sports Park Booking</h1>
-    <p style="font-size:18px"><b>Choose a sport to see available playground hours and prices.</b></p>
-</div>
-<div class="row" >
-    <div class="column" th:each="sport: ${mySportList}" >
-        <div class="card">
-            <a th:href ="'selectPlayGround?sportName='+${sport.SportName}"><img th:src="'/images/'+${sport.sportName}+'.jpg'" th:alt="${sport.sportName}" style="width:100%" height="600"></a>
-            <div class="container">
-                <h2><a th:href="'selectPlayGround?sportName='+${sport.SportName}">[[${sport.sportName}]]</a></h2>
+    <head>
+        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+        <title>SportParkBooking - Home</title>
+    </head>
+    <body>
+        <ul>
+            <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+            <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+            <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+            <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+            <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+            <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        </ul>
+        <p><br/></p>
+        <div>
+            <h1>Sports Park Booking</h1>
+            <p class="index">
+                <b>Choose a sport to see available playground hours and prices.</b>
+            </p>
+        </div>
+        <div class="row" >
+            <div class="column" th:each="sport: ${mySportList}" >
+                <div class="card">
+                    <a th:href ="'selectPlayGround?sportName='+${sport.SportName}"><img class="index" th:src="'/images/'+${sport.sportName}+'.jpg'" th:alt="${sport.sportName}" ></a>
+                    <div class="container">
+                        <h2><a th:href="'selectPlayGround?sportName='+${sport.SportName}">[[${sport.sportName}]]</a></h2>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<!--    <style>-->
-<!--            body {-->
-<!--              background-image: url('/images/index.jpg');-->
-<!--              width: auto;-->
-<!--              height: auto;-->
-<!--              background-repeat: no-repeat;-->
-<!--              background-size: 100%;-->
-<!--              background-position: center%;-->
-<!--            }-->
-<!--    </style>-->
-</body>
+    </body>
 </html>
