--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,68 +2,55 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>Register</title>
-</head>
-<body>
-<ul>
-    <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
-    <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
-    <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
-    <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
-    <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
-</ul>
+    <head>
+        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+        <title>Register</title>
+    </head>
+    <body class="register">
+        <ul>
+            <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+            <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+            <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+            <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+            <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+            <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        </ul>
 
-<p><br/></p>
-<!--<img src="/images/register.jpg"
-     th:attr="src=@{/images/register.jpg},title=#{register},alt=#{register}" />-->
-<p><br/></p>
-<p style="font-size:30px"><b> Register new user </b> </p>
+         <!--<img src="/images/register.jpg"
+             th:attr="src=@{/images/register.jpg},title=#{register},alt=#{register}" />-->
+        <br/> <br/>
 
-<form action="#" th:action="@{'/registerUser?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
-    <table border="1">
-        <tr>
-            <td><b>User Name:</b></td>
-            <td><input type="text" th:field="*{userName}"/></td>
-        </tr>
-        <tr>
-            <td><b>Name and Surname:</b></td>
-            <td><input type="text" th:field="*{name}"/></td>
-        </tr>
-        <tr>
-            <td><b>Email:</b></td>
-            <td><input type="email" th:field="*{userEmail}" /></td>
-        </tr>
-        <tr>
-            <td><b>Password:</b> </td>
-            <td><input type="password" th:field="*{userPassword}" /></td>
-        </tr>
-        <tr>
-            <td><b>Phone: </b></td>
-            <td><input type="tel" id="phone" name="phone"
-                       pattern="[0-9]{10}"
-                       required th:field="*{userPhone}" /></td>
-        </tr>
-        <tr>
-            <td>
-                <input type="reset" value="Reset" />
-                <input type="submit" value="Submit" />
-            </td>
-        </tr>
-        <style>
-                body {
-                  background-image: url('/images/register3.jpg');
-                  width: auto;
-                  height: auto;
-                  background-repeat: no-repeat;
-                  background-size: 100%;
-                  background-position: center%;
-                }
-        </style>
+        <h2 class ="loginOrRegister"><b> Register new user </b> </h2>
 
-    </table>
-</form>
-</body>
+        <form action="#" th:action="@{'/registerUser?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
+            <table border="1" >
+                <tr>
+                    <td><b>User Name:</b></td>
+                    <td><input type="text" th:field="*{userName}"/></td>
+                </tr>
+                <tr>
+                    <td><b>Name and Surname:</b></td>
+                    <td><input type="text" th:field="*{name}"/></td>
+                </tr>
+                <tr>
+                    <td><b>Email:</b></td>
+                    <td><input type="email" th:field="*{userEmail}" /></td>
+                </tr>
+                <tr>
+                    <td><b>Password:</b> </td>
+                    <td><input type="password" th:field="*{userPassword}" /></td>
+                </tr>
+                <tr>
+                    <td><b>Phone: </b></td>
+                    <td><input type="tel" id="phone" name="phone"
+                               pattern="[0-9]{10}"
+                               required th:field="*{userPhone}" /></td>
+                </tr>
+                <tr>
+                    <td> <center> <input type="reset" value="  Reset   " />   </center> </td>
+                    <td> <center> <input type="submit" value="  Submit  " />  </center> </td>
+                </tr>
+            </table>
+        </form>
+    </body>
 </html>
