--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
         <p><br/></p>
         <h2 class ="loginOrRegister"> <b>  Login user </b> </h2>
 
-        <form action="#" th:action="@{'/selectBookingDate?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
+        <form action="#" th:action="@{'/?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
             <table border="1" class="loginOrRegister">
                 <tr >
                     <td><b>Email:</b></td>
