--- a/src/main/resources/templates/contact_form.html
+++ b/src/main/resources/templates/contact_form.html
@@ -38,8 +38,8 @@
                        <td><textarea name="content" cols="60" rows="20" wrap="off"> </textarea> </td>
                    </tr>
                    <tr >
-                       <td> <input type="reset" value="Reset"> </td>
-                       <td> <input type="submit" value="Send"> </td>
+                       <td> <center> <input type="reset" value="  Reset  "> </center></td>
+                       <td> <center> <input type="submit" value="  Send  "> </center> </td>
                    </tr>
                </table>
 
